# lut3d_perf

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_clang.sh  build_gcc.sh  build_msvc.bat
.github/workflows/: workflow.yml
cmake/: TargetArch.cmake
samples/luts/: SLog3_to_ACESRec709.cube
src/: CMakeLists.txt  libavutil_common.h  lut3d_perf.c  lut3d_perf.h  parse_lut.c  platform_info.c  platform_info.h  tetrahedral_avx.c  tetrahedral_avx.h  tetrahedral_avx2.c  tetrahedral_avx2.h  tetrahedral_avx512.c  tetrahedral_avx512.h  tetrahedral_ffmpeg_asm.h  tetrahedral_ffmpeg_c.h  tetrahedral_neon.c  tetrahedral_neon.h  tetrahedral_ocio.cpp  tetrahedral_sse2.c  tetrahedral_sse2.h  x86_cpu_info.c  x86_cpu_info.h
src/libavutil/x86/: x86util.asm
tools/: README.txt
